tests/paczka1/small_fuzzy/68027167.err
Error in line 9: yXV A951 92,8
Error in line 12: A701 A13 88,5
